--- a/m/css/main.css
+++ b/m/css/main.css
@@ -7,12 +7,12 @@ html {
 }
 
 ::-moz-selection {
-    background: #b3d4fc;
+    background: #F2E5DE;
     text-shadow: none;
 }
 
 ::selection {
-    background: #b3d4fc;
+    background: #F2E5DE;
     text-shadow: none;
 }
 
@@ -134,6 +134,16 @@ a:hover, a:active {
 .p {
     margin: auto;
     width: 95%;
+    color: #48514E;
+    font-family: aleo;
+    font-size: 14px;
+}
+
+.indent {
+    margin: auto;
+    position: relative;
+    left: 5%;
+    width: 90%;
     color: #48514E;
     font-family: aleo;
     font-size: 14px;
