--- a/m/css/brett.css
+++ b/m/css/brett.css
@@ -1,15 +1,7 @@
-.sms-container {
-    width: 100%;
-    position: fixed;
-    top:75vh;
-    height: 25vh;
-    background-color: #4B7084;
-}
-
 .chat {
     position: relative;
     width: 100%;
-    height: 75vh;
+    height: calc(100vh - 150px);
     font-family: aleo;
     font-size: 14px;
     overflow-y: scroll;
@@ -19,33 +11,37 @@
 .send-container {
     display: table;
     margin: 0 auto;
+    position: fixed;
+    left: 25vw;
+    bottom: 1em;
 }
 
-[contenteditable=true]:empty:before {
-  content: attr(placeholder);
-  color: #888;
-}
-
-.sms-send {
+.sms-button {
     background-color: transparent;
     border: none;
     display: table-cell;
-    padding: 0px;
+    /*padding: 4px 7px 4px 7px;*/
+    padding: 0px 0px 0px 0px;
     margin-left: 6px;
+    margin-right: 6px;
 }
 
 .sms-input {
     font-family: aleo;
     font-size: 14px;
-    width: 50vw;
+    width: calc(50vw - 41px);
     height: 2em;
     display: table-cell;
     padding-left: 0.5em;
     padding-right: 0.5em;
     margin: 1em 0em;
     overflow: auto;
-    border: 3px transparent; 
+    border: 3px solid #4B7084; 
     background-color: #D1F3F9;
+}
+
+.sms-input:disabled {
+    background-color: #CDD8DD;
 }
 
 .bubble {
@@ -57,6 +53,7 @@
     width: 50vw;
     margin: 0.5em;
     word-wrap: break-word;
+    min-height: 19px;
 }
 
 .my-bubble {
@@ -69,6 +66,7 @@
     margin: 0.5em;
     float: right;
     word-wrap: break-word;
+    min-height: 19px;
 }
 
 .message-container {
