--- a/css/brett.css
+++ b/css/brett.css
@@ -1,15 +1,15 @@
 .sms-container {
     width: 100%;
     position: fixed;
-    top:75vh;
-    height: 25vh;
+    top:90vh;
+    height: 10vh;
     background-color: #4B7084;
 }
 
 .chat {
     position: relative;
     width: 100%;
-    height: 75vh;
+    height: 90vh;
     font-family: aleo;
     font-size: 14px;
     overflow-y: scroll;
@@ -19,13 +19,17 @@
 .send-container {
     display: table;
     margin: 0 auto;
+    position: fixed;
+    left: 25vw;
+    bottom: 1em;
 }
 
 .sms-button {
     background-color: transparent;
     border: none;
     display: table-cell;
-    padding: 4px 7px 4px 7px;
+    /*padding: 4px 7px 4px 7px;*/
+    padding: 0px 0px 0px 0px;
     margin-left: 6px;
     margin-right: 6px;
 }
@@ -33,14 +37,14 @@
 .sms-input {
     font-family: aleo;
     font-size: 14px;
-    width: 50vw;
+    width: calc(50vw - 41px);
     height: 2em;
     display: table-cell;
     padding-left: 0.5em;
     padding-right: 0.5em;
     margin: 1em 0em;
     overflow: auto;
-    border: 3px transparent; 
+    border: 3px solid #4B7084; 
     background-color: #D1F3F9;
 }
 
